Fix background-image not showing by removing / at beginning

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ header {
         position: absolute;
         z-index: 9999;
         background-color: transparent;
-        background-image: url('/assets/images/icon-menu.svg');
+        background-image: url('assets/images/icon-menu.svg');
         background-repeat: no-repeat;
         border: 0;
         width: 2rem;
@@ -95,7 +95,7 @@ header {
         right: 2rem;
     }
     .mobile-nav-toggle[aria-expanded='true']{
-        background-image: url('/assets/images/icon-menu-close.svg');
+        background-image: url('assets/images/icon-menu-close.svg');
     }
 }
 
